--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@ b
 				<b>Test Image - </b><img src="https://www.rebelsport.com.au/dw/image/v2/BBRV_PRD/on/demandware.static/-/Sites-srg-internal-master-catalog/default/dw7ed32d93/images/529445/Rebel_529445_mint_hi-res.jpg?sw=1000&amp;sh=1000&amp;sm=fit" class="img-responsive">
 			</li>
 			<h5>Output on <b>Microsoft Azure</b> -
-				<span> </span>  
+				<span> Water In Bottle </span>  
 			</h5>
 			<h5>Output on <b>Mobilenet Model </b> -
-				<span> </span>  
+				<span> Water Bottle </span>  
 			</h5>
 
 			<div class="bob3">
-				<h4>Result - </h4>
+				<h4>Result - Mobilenet Is More Accurate Than Microsoft Azure</h4>
 				<hr>
 				<h4> </h4>
 			</div>
